--- a/.github/workflows/lab_8.yaml
+++ b/.github/workflows/lab_8.yaml
@@ -23,7 +23,7 @@ jobs:
           DEFAULT_BRANCH: master
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           JAVA_FILE_NAME: checkstyle.xml
-          FILTER_REGEX_INCLUDE: .*Lab8/src/main/.*
+          FILTER_REGEX_INCLUDE: .*/src/main/.*
       - name: Test with Maven
         run: mvn --batch-mode --update-snapshots package
         working-directory: ./Lab8
